# core-utils

./: .gitignore  CMakeLists.txt
include/: colors.hpp  core-utils.hpp  logger.hpp  math.hpp  return.hpp
include/math/: mat4.hpp  quat.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/: logger.cpp  string.cpp
src/math/: transform.cpp
